--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,8 +5,34 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://use.fontawesome.com/8e56b09395.js"></script>
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
 </head>
 <body>
+
+    <ul id="navi">
+      <% if user_signed_in? %>
+       <li class="button button_red"> <a href="<%= destroy_user_session_path %>" data-method='delete'>
+        Sign out
+      </a></li>
+      <li class="button <%= 'active' if current_page?(edit_user_registration_path) %>">
+        <a href="<%= edit_user_registration_path(@user) %>">My profile</a>
+      </li>
+
+      <% else %>
+      <li class="button button_red"><a href="<%= new_user_registration_path %>"> Sign Up </a></li>
+      <li class="button button_red2"><a href="<%= new_user_session_path %>"> Sign in </a></li>
+    <% end %>
+    </li>
+    </ul>
+<br><br><br>
+
+<div class="container" id="inicio">
+<div class="logo"><a href="<%= root_path %>"><%= image_tag ("logo.png")%></a>
+</div>
+</div>
 
 <% if alert %>
 	<p class="alert"><%= alert %></p>
@@ -14,18 +40,11 @@
 	<p class="notice"><%= notice %></p>
 <% end %>
 
-<ul>
-<% if user_signed_in? %>
-  <li><a href="<%= destroy_user_session_path %>" data-method='delete'>Cerrar Sesión</a></li>
-<% else %>
-  <li><a href="<%= new_user_session_path %>"> Log in </a></li>
-  <li><a href="<%= new_user_registration_path %>"> Registrarse </a></li>
-<% end %>
-</ul>
 
 
-
+<div class="container">
 <%= yield %>
+</div>
 
 </body>
 </html>
