--- a/app/views/universities/_results.html.erb
+++ b/app/views/universities/_results.html.erb
@@ -1,79 +1,23 @@
-<h1>Listing Universities</h1>
+<div class="row">
+  <% @universities.each_with_index do |university, i| %>
+  <div class="col-md-4 col-sm-6">
+    <%= link_to university_path(university) do %>
 
-<table>
-  <thead>
-    <tr>
-      <th>User</th>
-      <th>Country</th>
-      <th>Option</th>
-      <th>Private or public</th>
-      <th>Name</th>
-      <th>Description</th>
-      <th>Fundation</th>
-      <th>Rector</th>
-      <th>Email</th>
-      <th>Facebook</th>
-      <th>Twitter</th>
-      <th>Linkedin</th>
-      <th>Website</th>
-      <th>Link admission</th>
-      <th>Address</th>
-      <th>Longitude</th>
-      <th>Latitude</th>
-      <th>Logo</th>
-      <th>Many proffesors</th>
-      <th>Many students</th>
-      <th>Is wifi</th>
-      <th>Is cafe</th>
-      <th>Is safe</th>
-      <th>Is libray</th>
-      <th>Is job help</th>
-      <th>Is student exchange</th>
-      <th>Is spiritual</th>
-      <th>Sports</th>
-      <th>Cutural</th>
-      <th>Languages</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @universities.each do |university| %>
-      <tr>
-        <td><%= university.user %></td>
-        <td><%= university.country %></td>
-        <td><%= university.option %></td>
-        <td><%= university.private_or_public %></td>
-        <td><%= university.name %></td>
-        <td><%= university.description %></td>
-        <td><%= university.fundation %></td>
-        <td><%= university.rector %></td>
-        <td><%= university.email %></td>
-        <td><%= university.facebook %></td>
-        <td><%= university.twitter %></td>
-        <td><%= university.linkedin %></td>
-        <td><%= university.website %></td>
-        <td><%= university.link_admission %></td>
-        <td><%= university.address %></td>
-        <td><%= university.longitude %></td>
-        <td><%= university.latitude %></td>
-        <td><%= university.logo %></td>
-        <td><%= university.many_proffesors %></td>
-        <td><%= university.many_students %></td>
-        <td><%= university.is_wifi %></td>
-        <td><%= university.is_cafe %></td>
-        <td><%= university.is_safe %></td>
-        <td><%= university.is_libray %></td>
-        <td><%= university.is_job_help %></td>
-        <td><%= university.is_student_exchange %></td>
-        <td><%= university.is_spiritual %></td>
-        <td><%= university.sports %></td>
-        <td><%= university.cutural %></td>
-        <td><%= university.languages %></td>
-        <td><%= link_to 'Show', university_path( university) %></td>
-        <td><%= link_to 'Edit', edit_university_path( university) %></td>
-        <td><%= link_to 'Destroy', university_path( university), method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+    <div id="magic_card">
+    <h2><%= i+1 %> |</h2>
+      <div class="imagen">
+        <%= image_tag ("logo.png")%>
+      </div>
+      <div class="content">
+        <h3><%= university.name.truncate(50) %></h3>
+        <h4 class="titulo"><%= university.country.name%></h4>
+        <p><%= university.description.truncate(100)%></p>
+        <h5 class="izq"><span class="fa fa-clone"> </span> <%= university.careers.count%> careers</h5>
+        <h5 class="der"><span class="fa fa-star"> </span> <%= university.average_score%></h5>
+      </div>
+    </div>
     <% end %>
-  </tbody>
-</table>
+  </div>
+  <% end %>
+</div>
+
