--- a/app/views/universities/_admissionscore.html.erb
+++ b/app/views/universities/_admissionscore.html.erb
@@ -1,4 +1,4 @@
-<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#AdmissionmyModal">New Admission Score</button>
+
 <!--  -->
 <!-- Modal -->
 <div class="modal fade" id="AdmissionmyModal" role="dialog">
@@ -35,7 +35,31 @@
   </div>
 </div>
 
-<h1>Admission Score: <span id="admission_reviews_count"><%= @university.average_admission_score %></span></h1>
+<% if @university.average_admission_score.between?(0, 0.99) %>
+<h6><span class="fa fa-star-half"></span>
+<% elsif @university.average_admission_score.between?(1, 1.49) %>
+<h6><span class="fa fa-star"></span>
+<% elsif @university.average_admission_score.between?(1.5, 1.99) %>
+<h6><span class="fa fa-star"><span class="fa fa-star-half"></span>
+<% elsif @university.average_admission_score.between?(2, 2.49) %>
+<h6><span class="fa fa-star"><span class="fa fa-star"></span>
+<% elsif @university.average_admission_score.between?(2.5, 2.99) %>
+<h6><span class="fa fa-star"><span class="fa fa-star"><span class="fa fa-star-half"></span>
+<% elsif @university.average_admission_score.between?(3, 3.49) %>
+<h6><span class="fa fa-star"><span class="fa fa-star"><span class="fa fa-star"></span>
+<% elsif @university.average_admission_score.between?(3.5, 3.99) %>
+<h6><span class="fa fa-star"><span class="fa fa-star"><span class="fa fa-star"><span class="fa fa-star-half"></span>
+<% elsif @university.average_admission_score.between?(4, 4.49) %>
+<h6><span class="fa fa-star"><span class="fa fa-star"><span class="fa fa-star"><span class="fa fa-star"><span class="fa fa-star"></span>
+<% elsif @university.average_admission_score.between?(4.5, 4.99) %>
+<h6><span class="fa fa-star"><span class="fa fa-star"><span class="fa fa-star"><span class="fa fa-star"><span class="fa fa-star-half"></span>
+<% elsif @university.average_admission_score.between?(5, 5.99) %>
+<h6><span class="fa fa-star"><span class="fa fa-star"><span class="fa fa-star"><span class="fa fa-star"><span class="fa fa-star"></span>
+<% end %>
+<span id="reviews_count">(<%= @university.average_admission_score %>)</span></h6>
+
+
+<button type="button" class="botones button_red" data-toggle="modal" data-target="#AdmissionmyModal">New Admission Score</button>
 
 
 <!--  -->
