--- a/app/views/universities/_professorscore.html.erb
+++ b/app/views/universities/_professorscore.html.erb
@@ -1,5 +1,4 @@
-<!-- Trigger the modal with a button -->
-<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#ProfessormyModal">New Professor Score</button>
+
 <!--  -->
 <!-- Modal -->
 <div class="modal fade" id="ProfessormyModal" role="dialog">
@@ -36,7 +35,30 @@
   </div>
 </div>
 
-<h1>Professor Score: <span id="professor_reviews_count"><%= @university.average_professor_score %></span></h1>
+<% if @university.average_professor_score.between?(0, 0.99) %>
+<h5><span class="fa fa-star-half"></span>
+<% elsif @university.average_professor_score.between?(1, 1.49) %>
+<h5><span class="fa fa-star"></span>
+<% elsif @university.average_professor_score.between?(1.5, 1.99) %>
+<h5><span class="fa fa-star"><span class="fa fa-star-half"></span>
+<% elsif @university.average_professor_score.between?(2, 2.49) %>
+<h5><span class="fa fa-star"><span class="fa fa-star"></span>
+<% elsif @university.average_professor_score.between?(2.5, 2.99) %>
+<h5><span class="fa fa-star"><span class="fa fa-star"><span class="fa fa-star-half"></span>
+<% elsif @university.average_professor_score.between?(3, 3.49) %>
+<h5><span class="fa fa-star"><span class="fa fa-star"><span class="fa fa-star"></span>
+<% elsif @university.average_professor_score.between?(3.5, 3.99) %>
+<h5><span class="fa fa-star"><span class="fa fa-star"><span class="fa fa-star"><span class="fa fa-star-half"></span>
+<% elsif @university.average_professor_score.between?(4, 4.49) %>
+<h5><span class="fa fa-star"><span class="fa fa-star"><span class="fa fa-star"><span class="fa fa-star"><span class="fa fa-star"></span>
+<% elsif @university.average_professor_score.between?(4.5, 4.99) %>
+<h5><span class="fa fa-star"><span class="fa fa-star"><span class="fa fa-star"><span class="fa fa-star"><span class="fa fa-star-half"></span>
+<% elsif @university.average_professor_score.between?(5, 5.99) %>
+<h5><span class="fa fa-star"><span class="fa fa-star"><span class="fa fa-star"><span class="fa fa-star"><span class="fa fa-star"></span>
+<% end %>
+<span id="reviews_count">(<%= @university.average_professor_score %>)</span></h5>
 
+<!-- Trigger the modal with a button -->
+<button type="button" class="botones button_red" data-toggle="modal" data-target="#ProfessormyModal">New Professor Score</button>
 
 <!--  -->
