--- a/app/views/universities/_investmentscore.html.erb
+++ b/app/views/universities/_investmentscore.html.erb
@@ -1,5 +1,3 @@
-<!-- Trigger the modal with a button -->
-<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#InvestmentmyModal">New Investment Score</button>
 <!--  -->
 <!-- Modal -->
 <div class="modal fade" id="InvestmentmyModal" role="dialog">
@@ -36,7 +34,31 @@
   </div>
 </div>
 
-<h1>Investment Score: <span id="investment_reviews_count"><%= @university.average_investment_score %></span></h1>
+<% if @university.average_investment_score.between?(0, 0.99) %>
+<h5><span class="fa fa-money"></span>
+<% elsif @university.average_investment_score.between?(1, 1.49) %>
+<h5><span class="fa fa-money"></span>
+<% elsif @university.average_investment_score.between?(1.5, 1.99) %>
+<h5><span class="fa fa-money"></span>
+<% elsif @university.average_investment_score.between?(2, 2.49) %>
+<h5><span class="fa fa-money"><span class="fa fa-money"></span>
+<% elsif @university.average_investment_score.between?(2.5, 2.99) %>
+<h5><span class="fa fa-money"><span class="fa fa-money"></span>
+<% elsif @university.average_investment_score.between?(3, 3.49) %>
+<h5><span class="fa fa-money"><span class="fa fa-money"><span class="fa fa-money"></span>
+<% elsif @university.average_investment_score.between?(3.5, 3.99) %>
+<h5><span class="fa fa-money"><span class="fa fa-money"><span class="fa fa-money"></span>
+<% elsif @university.average_investment_score.between?(4, 4.49) %>
+<h5><span class="fa fa-money"><span class="fa fa-money"><span class="fa fa-money"><span class="fa fa-money"></span>
+<% elsif @university.average_investment_score.between?(4.5, 4.99) %>
+<h5><span class="fa fa-money"><span class="fa fa-money"><span class="fa fa-money"><span class="fa fa-money"></span>
+<% elsif @university.average_investment_score.between?(5, 5.99) %>
+<h5><span class="fa fa-money"><span class="fa fa-money"><span class="fa fa-money"><span class="fa fa-money"><span class="fa fa-money"></span>
+<% end %>
+<span id="investment_reviews_count">(<%= @university.average_investment_score %>)</span></h5>
 
+
+<!-- Trigger the modal with a button -->
+<button type="button" class="botones button_red" data-toggle="modal" data-target="#InvestmentmyModal">New Investment Score</button>
 
 <!--  -->
