--- a/app/views/universities/_unive_score.html.erb
+++ b/app/views/universities/_unive_score.html.erb
@@ -1,6 +1,3 @@
-<!-- Trigger the modal with a button -->
-<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">New Unive Score</button>
-<!--  -->
 <!-- Modal -->
 <div class="modal fade" id="myModal" role="dialog">
   <div class="modal-dialog modal-sm">
@@ -36,4 +33,29 @@
   </div>
 </div>
 
-<h1>Unive Score: <span id="reviews_count"><%= @university.average_score %></span></h1>
+
+<% if @university.average_score.between?(0, 0.99) %>
+<h3><span class="fa fa-star-half"></span>
+<% elsif @university.average_score.between?(1, 1.49) %>
+<h3><span class="fa fa-star"></span>
+<% elsif @university.average_score.between?(1.5, 1.99) %>
+<h3><span class="fa fa-star"><span class="fa fa-star-half"></span>
+<% elsif @university.average_score.between?(2, 2.49) %>
+<h3><span class="fa fa-star"><span class="fa fa-star"></span>
+<% elsif @university.average_score.between?(2.5, 2.99) %>
+<h3><span class="fa fa-star"><span class="fa fa-star"><span class="fa fa-star-half"></span>
+<% elsif @university.average_score.between?(3, 3.49) %>
+<h3><span class="fa fa-star"><span class="fa fa-star"><span class="fa fa-star"></span>
+<% elsif @university.average_score.between?(3.5, 3.99) %>
+<h3><span class="fa fa-star"><span class="fa fa-star"><span class="fa fa-star"><span class="fa fa-star-half"></span>
+<% elsif @university.average_score.between?(4, 4.49) %>
+<h3><span class="fa fa-star"><span class="fa fa-star"><span class="fa fa-star"><span class="fa fa-star"><span class="fa fa-star"></span>
+<% elsif @university.average_score.between?(4.5, 4.99) %>
+<h3><span class="fa fa-star"><span class="fa fa-star"><span class="fa fa-star"><span class="fa fa-star"><span class="fa fa-star-half"></span>
+<% elsif @university.average_score.between?(5, 5.99) %>
+<h3><span class="fa fa-star"><span class="fa fa-star"><span class="fa fa-star"><span class="fa fa-star"><span class="fa fa-star"></span>
+<% end %>
+<span id="reviews_count">(<%= @university.average_score %>)</span></h3>
+
+<!-- Trigger the modal with a button -->
+<button type="button" class="botones button_red" data-toggle="modal" data-target="#myModal">New U-Finder Score</button>
