--- a/app/views/universities/_academicscore.html.erb
+++ b/app/views/universities/_academicscore.html.erb
@@ -26,7 +26,7 @@
     <%= f.number_field :academic_score %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit class: "botones button_red" %>
   </div>
 <% end %>
 </div>
@@ -55,7 +55,7 @@
 <% elsif @university.average_academic_score.between?(5, 5.99) %>
 <h5><span class="fa fa-star"><span class="fa fa-star"><span class="fa fa-star"><span class="fa fa-star"><span class="fa fa-star"></span>
 <% end %>
-<span id="reviews_count">(<%= @university.average_academic_score %>)</span></h5>
+<span id="academic_reviews_count">(<%= @university.average_academic_score %>)</span></h5>
 
 
 <!-- Trigger the modal with a button -->
