--- a/app/views/universities/_infraestructurescore.html.erb
+++ b/app/views/universities/_infraestructurescore.html.erb
@@ -28,7 +28,7 @@
     <%= f.number_field :infraestructure_score %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit class: "botones button_red" %>
   </div>
 <% end %>
 </div>
@@ -57,7 +57,7 @@
 <% elsif @university.average_infraestructure_score.between?(5, 5.99) %>
 <h5><span class="fa fa-star"><span class="fa fa-star"><span class="fa fa-star"><span class="fa fa-star"><span class="fa fa-star"></span>
 <% end %>
-<span id="reviews_count">(<%= @university.average_infraestructure_score %>)</span></h5>
+<span id="infraestructure_reviews_count">(<%= @university.average_infraestructure_score %>)</span></h5>
 
 
 <!-- Trigger the modal with a button -->
