--- a/app/views/universities/_unive_score.html.erb
+++ b/app/views/universities/_unive_score.html.erb
@@ -24,7 +24,7 @@
           <%= f.number_field :unive_score %>
         </div>
         <div class="actions">
-          <%= f.submit %>
+          <%= f.submit class: "botones button_red" %>
         </div>
         <% end %>
 
