--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -64,12 +64,19 @@ height: 200px;
 margin-bottom: 20px;
 }
 
+#map2 {
+width: 100%;
+height: 200px;
+margin-bottom: 20px;
+}
+
 #my_search {
   label {
     cursor:pointer;
   }
   input:checked ~ label {
-   background-color: $red;
+   background-color: #067892;
+   border-color: #067892;
    color: white;
  }
 }
@@ -274,3 +281,65 @@ background-attachment: unset;
   background-image: image-url("innova_cover.jpg");
   height: 35vh;
 }
+
+.modal-content {
+  h4 {
+    text-align: center;
+  }
+  label {
+    margin-top: 0px;
+    font-weight: 700;
+    font-size: 15px;
+    text-transform: uppercase;
+    padding-left: 8px;
+    line-height: 19px;
+    height: 41px;
+    padding-top: 10px;
+    color: #4f4f4f;
+  }
+
+  input[type="number"], select {
+  width: 50%;
+  height: 3.5rem;
+  border:none;
+  border-bottom:1.3px solid $red;
+  padding-left: 10px;
+  margin-bottom: 1rem;
+  background-color: white !important;
+  }
+
+}
+
+.face {
+    color: #3b5998;
+    text-align: center;
+    vertical-align: middle;
+    &:hover {
+    color: white;
+    }
+  }
+    .twitter {
+    color: #55acee;
+    text-align: center;
+    vertical-align: middle;
+    &:hover {
+    color: white;
+    }
+  }
+    .insta {
+    color: #e95950;
+    text-align: center;
+    vertical-align: middle;
+    &:hover {
+    color: white;
+    }
+  }
+    .you {
+    color: #bb0000;
+    text-align: center;
+    vertical-align: middle;
+    &:hover {
+    color: white;
+    }
+  }
+
