--- a/app/views/universities/_admissionscore.html.erb
+++ b/app/views/universities/_admissionscore.html.erb
@@ -27,7 +27,7 @@
     <%= f.number_field :admission_score %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit class: "botones button_red" %>
   </div>
 <% end %>
 </div>
@@ -56,7 +56,7 @@
 <% elsif @university.average_admission_score.between?(5, 5.99) %>
 <h6><span class="fa fa-star"><span class="fa fa-star"><span class="fa fa-star"><span class="fa fa-star"><span class="fa fa-star"></span>
 <% end %>
-<span id="reviews_count">(<%= @university.average_admission_score %>)</span></h6>
+<span id="admission_reviews_count">(<%= @university.average_admission_score %>)</span></h6>
 
 
 <button type="button" class="botones button_red" data-toggle="modal" data-target="#AdmissionmyModal">New Admission Score</button>
