--- a/app/views/universities/_finantialscore.html.erb
+++ b/app/views/universities/_finantialscore.html.erb
@@ -28,7 +28,7 @@
     <%= f.number_field :Finantial_score %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit class: "botones button_red" %>
   </div>
 <% end %>
 </div>
