--- a/app/views/universities/_graduationscore.html.erb
+++ b/app/views/universities/_graduationscore.html.erb
@@ -28,7 +28,7 @@
     <%= f.number_field :graduation_score %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit class: "botones button_red" %>
   </div>
 <% end %>
 </div>
