--- a/app/views/universities/_investmentscore.html.erb
+++ b/app/views/universities/_investmentscore.html.erb
@@ -26,7 +26,7 @@
     <%= f.number_field :investment_score %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit class: "botones button_red" %>
   </div>
 <% end %>
 </div>
