--- a/app/views/universities/_professorscore.html.erb
+++ b/app/views/universities/_professorscore.html.erb
@@ -27,7 +27,7 @@
     <%= f.number_field :professor_score %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit class: "botones button_red" %>
   </div>
 <% end %>
 </div>
@@ -56,7 +56,7 @@
 <% elsif @university.average_professor_score.between?(5, 5.99) %>
 <h5><span class="fa fa-star"><span class="fa fa-star"><span class="fa fa-star"><span class="fa fa-star"><span class="fa fa-star"></span>
 <% end %>
-<span id="reviews_count">(<%= @university.average_professor_score %>)</span></h5>
+<span id="professor_reviews_count">(<%= @university.average_professor_score %>)</span></h5>
 
 <!-- Trigger the modal with a button -->
 <button type="button" class="botones button_red" data-toggle="modal" data-target="#ProfessormyModal">New Professor Score</button>
