--- a/app/views/countries/show.html.erb
+++ b/app/views/countries/show.html.erb
@@ -10,5 +10,10 @@
   <%= @country.language %>
 </p>
 
+<p>
+  <strong>continent:</strong>
+  <%= @country.continent %>
+</p>
+
 <%= link_to 'Edit', edit_country_path(@country) %> |
 <%= link_to 'Back', countries_path %>
